# people_polls

backend/: Cargo.toml
backend/dbschema/: default.esdl
backend/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql
backend/src/: main.rs
frontend-keane/: README.md  index.html  package-lock.json  package.json
frontend-keane/src/: App.vue
frontend-keane/src/components/: LoginRegister.vue  PollsList.vue  ProgressBar.vue  TheWelcome.vue
frontend-keane/src/router/: index.ts
frontend-keane/src/stores/: user.ts
frontend-keane/src/views/: AboutView.vue  HomeView.vue  LoginView.vue  LogoutView.vue  RegisterView.vue
frontend-max/: app.js  index.html  package.json  register.html  results.html  suggestpoll.html
frontend-max/login/: index.html
frontend/src/: App.js  App.tsx
frontend/src/components/Choice/: choice.tsx
frontend/src/components/Login/: login.tsx
frontend/src/components/Question/: question.tsx
