[package]
name = "people_polls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
edgedb-tokio = "0.3.0"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
uuid = "1.2.1"
env_logger = "0.9.3"
argon2 = "0.4.1"